# codificacion_script

./: .gitignore  DEPLOYMENT_MANUAL_WINDOWS_SERVER.md  DEPLOYMENT_WINDOWS_SERVER.md  FC1.xlsx  FC1_Códigos.xlsx  Flujo_PA.txt  MIGRACION_COMPLETADA.md  OPTIMIZACION_COSTOS.md  QUICKSTART.md  QUICK_START_DEPLOYMENT.md  README.md  README_v05.md  RESUMEN_CAMBIOS.md  convertir_doc_a_docx.py  ejecutar_web.py  prompt agente codificacion.txt  pyproject.toml  requirements.txt  test_sonido.html
backend/: logging_prod.json  pyproject.toml
backend/src/cod_backend/: __init__.py  config.py  data_utils.py  main.py
backend/src/cod_backend/config/: __init__.py  models.py  pricing.py  settings.py
backend/src/cod_backend/core/: __init__.py  codificador.py  (+2 more)
backend/tests/: __init__.py  test_api.py  test_api_codificacion.py  test_codificador.py  test_config.py  test_gpt_hibrido.py  test_gpt_schemas.py  test_utils.py
frontend/: .gitignore  .npmrc  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/dashboard/: DashboardHeader.tsx  ErrorDisplay.tsx  LoadingState.tsx  NotificationBanner.tsx  ProcessItem.tsx  ProcessList.tsx  StatsCards.tsx  SummaryCards.tsx  index.ts
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/components/modals/: AuxiliarConfigModal.tsx  HelpModal.tsx
frontend/components/results/: ResultsSection.tsx
frontend/components/ui/: BackendStatus.tsx  FileUpload.tsx  ModelSelector.tsx  Notification.tsx  ProgressBar.tsx  StatsCard.tsx
frontend/hooks/: __init__.ts  useAuxiliarData.ts  useBackendStatus.ts  useCodification.ts  useDarkMode.ts  useFileUpload.ts  useModels.ts  useMonitoring.ts  useNotifications.ts  useProcessActions.ts
frontend/src/cod_frontend/: __init__.py  app.py
frontend/tests/: __init__.py
frontend/types/: index.ts
frontend/utils/: audio.ts  constants.ts  helpers.ts  processHelpers.ts
(+133 files in other folders)
