[project]
name = "codificacion-automatizada-backend"
version = "0.6.0"
description = "Backend API para codificación automatizada con GPT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.4",
    "openai>=1.10.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cod_backend"]

