[project]
name = "codificacion-automatizada-frontend"
version = "0.6.0"
description = "Frontend Streamlit para codificación automatizada"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cod_frontend"]

